<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="10dp"
    android:layout_marginHorizontal="10dp"
    android:backgroundTint="#e0e0e0"
    xmlns:tools="http://schemas.android.com/tools"
    >
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginVertical="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
            android:id="@+id/title_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/title_item_prestamo"
            android:textSize="17sp"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/tv_item_status_loan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/item_status"
            android:textSize="14sp"
            android:layout_marginEnd="15dp"
            android:textColor="#000000"
            tools:text="Estado: Aproved"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title_item"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingTop="5dp"
            >

            <TextView
                android:id="@+id/tv_item_name_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/item_titular_nombre"
                android:textSize="14sp"
                tools:text="Titular: Heber Julián Benso"
                />

            <TextView
                android:id="@+id/tv_item_dni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/item_titular_dni"
                android:textSize="14sp"
                tools:text="DNI: 40506247"
                />
            <TextView
                android:id="@+id/tv_item_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/item_titular_email"
                android:textSize="14sp"
                tools:text="email: julianbenso@gmail.com"
                />
            <TextView
                android:id="@+id/tv_item_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/item_titular_genero"
                android:textSize="14sp"
                android:layout_marginBottom="5dp"
                tools:text="Género: Masculino"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/btn_eliminar_solicitud"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:layout_marginEnd="5dp"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/btn_modificar_solicitud"
                    android:textSize="12sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:textAlignment="center"
                    />
            </LinearLayout>



        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>